<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="ic_solved_description">Crime solved</string>
    <string name="first_button_text">First</string>
    <string name="last_button_text">Last</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="time_button_text">Change Time %s</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show number of crimes</string>
    <string name="hide_subtitle">Hide number of crimes</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="edit_crime">Edit Crime</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit_helper_text">Click on Edit Button to edit the crime.</string>
    <string name="empty_list_help_text">There are no crimes.</string>
    <string name="add_crime_button_text">Add Crime</string>
    <string name="crime_suspect_button_text">Choose suspect</string>
    <string name="crime_report_button_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="send_helper_text">Save crime to send report.</string>
    <string name="read_contact_permission_reason">You need to give permission to read Contact so
        that we can show you a possible list of Suspects.</string>
    <string name="suspect_information">Suspect: %s</string>
    <string name="call_suspect_button_text">Confront the suspect!</string>
    <string name="call_suspect_helper_text">Save crime to call the suspect.</string>
    <string name="crime_photo_description">Crime Photo</string>
    <string name="crime_camera_description">Take crime\'s photo</string>
    <string name="photo_click_advice">Use your camera in square configuration to get best photo.</string>
</resources>
