<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:id="@+id/edit_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/crime_title_label" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crime_title"
            android:hint="@string/crime_title_hint"
            android:inputType="textNoSuggestions"
            android:autofillHints="@string/crime_title_label"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:listSeparatorTextViewStyle"
            android:text="@string/crime_details_label" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crime_date"
            android:textColor="@color/text_color"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/set_time_button"
            android:text="@string/time_button_text"
            android:textAllCaps="false"
            android:textColor="@color/text_color"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_solved_label"
            android:id="@+id/crime_solved"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_helper_text"
            android:textAllCaps="false"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:id="@+id/edit_alert_text"
            android:layout_marginTop="10dp"
            android:padding="2dp" />

    </LinearLayout>
</FrameLayout>